fix overflow issue on homepage

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .slider {
-    height: 60%;
+    min-height: 60%;
 }
 
 .background-dark {
